fixing whitespace above and below banner

--- a/prototype/css/slippry.css
+++ b/prototype/css/slippry.css
@@ -502,7 +502,7 @@
 {
 	background:url(../images/banner.jpg) repeat-x 0px 0px #fff;
 	background-size: cover;
-	margin: 5em 0em;
+	margin: 1em 0em;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-o-border-radius: 5px;
